# dioxus-desktop-template

./: .envrc  .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  flake.nix  garnix.yaml  justfile  rust-toolchain.toml  tailwind.config.js
.github/workflows/: ci.yaml  nix.yml
assets/: tailwind.css
css/: input.css
nix/: flake-module.nix
src/: main.rs  state.rs
