[package]
name = "dioxus-desktop-template"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { features = [
    "desktop",
], git = "https://github.com/DioxusLabs/dioxus.git", rev = "b19a546c0ac639a5cf9e942fff7729ad30e91a5e" }
dioxus-desktop = { git = "https://github.com/DioxusLabs/dioxus.git", rev = "b19a546c0ac639a5cf9e942fff7729ad30e91a5e" }
dioxus-router = { git = "https://github.com/DioxusLabs/dioxus.git", rev = "b19a546c0ac639a5cf9e942fff7729ad30e91a5e" }
dioxus-signals = { git = "https://github.com/DioxusLabs/dioxus.git", rev = "b19a546c0ac639a5cf9e942fff7729ad30e91a5e" }
dioxus-fullstack = { git = "https://github.com/DioxusLabs/dioxus.git", rev = "b19a546c0ac639a5cf9e942fff7729ad30e91a5e" }
dioxus-std = { version = "0.4.0", features = ["clipboard", "utils"] }
memory-stats = "1.1.0"
tokio = "1.32.0"
